fix(scrollbar): fix style of scrollbar
hide native scrollbar horizontal, give default height: 100%

fix #964

--- a/packages/theme-chalk/src/scrollbar.scss
+++ b/packages/theme-chalk/src/scrollbar.scss
@@ -4,6 +4,7 @@
 @include b(scrollbar) {
   overflow: hidden;
   position: relative;
+  height: 100%;
 
   &:hover,
   &:active,
@@ -17,13 +18,8 @@
   @include e(wrap) {
     overflow: scroll;
     height: 100%;
-
-    @include m(hidden-default) {
-      scrollbar-width: none;
-      &::-webkit-scrollbar {
-        width: 0;
-        height: 0;
-      }
+    &::-webkit-scrollbar {
+      display: none;
     }
   }
 
